# predict_np_spot_prices

./: README.md  pyproject.toml
data/entsoe/: generation_per_prod_type_EE_2020-01-01--2025-11-30.pqt  generation_per_prod_type_NO4_2020-01-01--2025-11-30.pqt  generation_per_prod_type_NO_2020-01-01--2025-11-30.pqt  generation_per_prod_type_SE1_2020-01-01--2025-11-30.pqt  generation_per_prod_type_SE3_2020-01-01--2025-11-30.pqt  generation_per_prod_type_SE_2020-01-01--2025-11-30.pqt  load_EE_2020-01-01--2025-11-30.pqt  load_FI_2020-01-01--2025-11-30.pqt  load_NO4_2020-01-01--2025-11-30.pqt  load_NO_2020-01-01--2025-11-30.pqt  load_SE1_2020-01-01--2025-11-30.pqt  load_SE3_2020-01-01--2025-11-30.pqt  load_SE_2020-01-01--2025-11-30.pqt  physical_flows_EE_2020-01-01--2025-11-30.pqt  physical_flows_FI_2020-01-01--2025-11-30.pqt  physical_flows_NO1_2020-01-01--2025-11-30.pqt  physical_flows_NO2_2020-01-01--2025-11-30.pqt  physical_flows_NO3_2020-01-01--2025-11-30.pqt  physical_flows_NO4_2020-01-01--2025-11-30.pqt  physical_flows_NO5_2020-01-01--2025-11-30.pqt  physical_flows_SE1_2020-01-01--2025-11-30.pqt  physical_flows_SE2_2020-01-01--2025-11-30.pqt  physical_flows_SE3_2020-01-01--2025-11-30.pqt  physical_flows_SE4_2020-01-01--2025-11-30.pqt  prices_EE_2019-12-31--2025-11-30.pqt  prices_FI_2019-12-31--2025-11-30.pqt  prices_NO4_2019-12-31--2025-11-30.pqt  prices_SE1_2019-12-31--2025-11-30.pqt  prices_SE3_2019-12-31--2025-11-30.pqt  scheduled_exchanges_EE-FI_2020-01-01--2025-11-30.pqt  scheduled_exchanges_FI-EE_2020-01-01--2025-11-30.pqt  (+10 more)
src/predict_np_spot_prices/: Home.py  (+6 more)
(+48 files in other folders)
